cluster/apps/default/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr:1.29.1 # {"$imagepolicy": "flux-system:overseerr"}
        ports:
        - containerPort: 5055
        readinessProbe:
          httpGet:
            path: /
            port: 5055
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 5055
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: overseerr-config
