cluster/apps/default/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  ports:
    - port: 5055
  selector:
    app: overseerr
